# YoloLauncher

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.jsx  ConsoleApp.jsx  i18n.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: slp_test.rs
src-tauri/icons/: icon.icns
src-tauri/src/: accounts.rs  content.rs  download.rs  instances.rs  java.rs  launch.rs  lib.rs  main.rs  migration.rs  paths.rs  python.rs  servers.rs  skins.rs  tray.rs  update.rs
src/components/: ConfettiCanvas.jsx  ConsoleWindow.jsx  DialogProvider.jsx  DownloadNotifications.jsx  DownloadNotificationsDrawer.jsx  LanguageModal.jsx  MigrationModal.jsx  Sidebar.jsx  SkinViewer3D.jsx  Titlebar.jsx  ToastProvider.jsx  UpdateModal.jsx
src/pages/: AccountsPage.jsx  HomePage.jsx  InstanceViewPage.jsx  InstancesPage.jsx  ServersPage.jsx  SettingsPage.jsx  VersionsPage.jsx
src/pages/tabs/: ContentTabs.jsx  LogsTab.jsx  ModsTab.jsx  ScreenshotsTab.jsx
src/utils/: consoleWindow.js  minecraftColors.jsx  news.js  servers.js  settings.js  stats.js
